--- a/index.html
+++ b/index.html
@@ -4,10 +4,21 @@
 	</head>
 	<body>
 		<h1>Getting to Know Git: A Guide to the ALA Class</h1>
+		<p>This is a resource guide for the upcoming ALA session, "Getting to Know git". 
+			In this class we will talk about what git is, why you should use it, and give
+			you a brief lesson on how to work with git. </p>
+
+			<p>We will save the last half hour to have people investigate git (and GitHub), 
+			with different steps depending on whether you want to use command-line (command-line is
+			strongly encouraged but not necessary).</p>
+
+			<p>Feel free to follow any of these steps before class!</p>
+
 		<ul>
-			<li>Installation</li>
-			<li>Using Git Without the Command-line</li>
-			<li>Using Git With the Command-line</li>
+			<li><a href="#gh-login">Set up with GitHub</a></li>
+			<li><a href="#gui">Using Git Without the Command-line</a></li>
+			<li><a href="#cli">Using Git With the Command-line</a></li>
+			<li><a href="#more">Resources for learning more about Git<a></li>
 		</ul>	
 
 </body>
