add initial style

--- a/index.html
+++ b/index.html
@@ -1,9 +1,16 @@
 <html>
 <title>Getting to Know Git</title>
+
 <head>
+	<link href="gtk_style/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
+  <link href="gtk_stlye/stylesheets/print.css" media="print" rel="stylesheet" type="text/css" />
+  <!--[if IE]>
+      <link href="/stylesheets/ie.css" media="screen, projection" rel="stylesheet" type="text/css" />
+      -->
 	</head>
 	<body>
-		<h1>Getting to Know Git: A Guide to the ALA Class</h1>
+		<h1 id="header">Getting to Know Git: A Guide to the ALA Class</h1>
+		<div id="main">
 		<p>This is a resource guide for the upcoming ALA session, "Getting to Know git". 
 			In this class we will talk about what git is, why you should use it, and give
 			you a brief lesson on how to work with git. </p>
@@ -19,7 +26,8 @@
 			<li><a href="#gui">Using Git Without the Command-line</a></li>
 			<li><a href="#cli">Using Git With the Command-line</a></li>
 			<li><a href="#more">Resources for learning more about Git<a></li>
-		</ul>	
+		</ul>
+		</div>	
 
 </body>
 </html>		
