slightly change header

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       -->
 	</head>
 	<body>
-		<h1 id="header">Getting to Know Git: A Guide to the ALA Class</h1>
+		<h1 id="header">Getting to Know Git: A Guide for the ALA Class</h1>
 		<div id="main">
 		<p>This is a resource guide for the upcoming ALA session, "Getting to Know git". 
 			In this class we will talk about what git is, why you should use it, and give
