--- a/index.html
+++ b/index.html
@@ -22,11 +22,13 @@
 			<p>Feel free to follow any of these steps before class!</p>
 
 		<ul>
-			<li><a href="#gh-login">Set up with GitHub</a></li>
+			<li><a href="#gh-login">Set yourself up with GitHub</a><span class="note"> (btw, you don't need to use GitHub to use git, but it does give you a lot of benefits).</span></li>
 			<li><a href="#gui">Using Git Without the Command-line</a></li>
 			<li><a href="#cli">Using Git With the Command-line</a></li>
 			<li><a href="#more">Resources for learning more about Git<a></li>
 		</ul>
+         <div id="gh-login">
+
 		</div>	
 
 </body>
