--- a/index.html
+++ b/index.html
@@ -23,11 +23,24 @@
 
 		<ul>
 			<li><a href="#gh-login">Set yourself up with GitHub</a><span class="note"> (btw, you don't need to use GitHub to use git, but it does give you a lot of benefits).</span></li>
-			<li><a href="#gui">Using Git Without the Command-line</a></li>
-			<li><a href="#cli">Using Git With the Command-line</a></li>
+			<li><a href="#gui">Use Git Without the Command-line</a></li>
+			<li><a href="#cli">Use Git With the Command-line</a></li>
 			<li><a href="#more">Resources for learning more about Git<a></li>
 		</ul>
          <div id="gh-login">
+         	<h2>GitHub</h2>
+         	<p>You'll probably want to use GitHub as a space to view and store your own projects and view other people's. </p>
+         		<ol>
+         			<li>Get a user name and password: <a href="https://github.com/join">https://github.com/join</a></li>
+         			<li>Look around at the repositories already on GitHub. You might recognize a few:</li>
+         				<ul>
+         					<li><a href="https://github.com/jquery/jquery">JQuery</a></li>
+         					<li><a href="https://github.com/NYPL">NYPublic Library</a></li>
+         					<li><a href="https://github.com/fcrepo4">Fedora</a></li>
+         					<li><a href="https://github.com/hklish01/gettingtoknowgit/tree/gh-pages">The code for these slides</a>
+         			    </ul>
+         			  </ol> 
+              <p>The next step involves working with git on your own computer. You decide if you want <a href="#cli">command-line</a> <span class="note">(do it!)</span> or <a href="#gui">not</a>. </p>
 
 		</div>	
 
