add git with gui page

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 			<p>Feel free to follow any of these steps before class!</p>
 
 		<ul>
-			<li><a href="#gh-login">Set yourself up with GitHub</a><span class="note"> (btw, you don't need to use GitHub to use git, but it does give you a lot of benefits).</span></li>
-			<li><a href="#gui">Use Git Without the Command-line</a></li>
+			<li>Set yourself up with GitHub - see instructions below</a><span class="note"> (btw, you don't need to use GitHub to use git, but it does give you a lot of benefits).</span></li>
+			<li><a href="git_with_gui">Use Git Without the Command-line</a></li>
 			<li><a href="git_with_commandline">Use Git With the Command-line</a></li>
-			<li><a href="#more">Resources for learning more about Git<a></li>
+			<li><a href="resources">Resources for learning more about Git<a></li>
 		</ul>
          <div id="gh-login">
          	<h2>GitHub</h2>
@@ -40,7 +40,7 @@
          					<li><a href="https://github.com/hklish01/gettingtoknowgit/tree/gh-pages">The code for these slides</a>
          			    </ul>
          			  </ol> 
-              <p>The next step involves working with git on your own computer. You decide if you want <a href="git_with_commandline">command-line</a> <span class="note">(do it!)</span> or <a href="#gui">not</a>. </p>
+              <p>The next step involves working with git on your own computer. You decide if you want <a href="git_with_commandline">command-line</a> <span class="note">(do it!)</span> or <a href="git_with_gui">not</a>. </p>
 
 		</div>	
 
