--- a/git_with_gui.html
+++ b/git_with_gui.html
@@ -9,6 +9,7 @@
       -->
 	</head>
 	<body>
+		<div id="nav">< <a href="index.html">Back to Getting to Know Git for ALA: Home</a></div>
 		<h1 id="header">Using Git with a GUI</h1>
 		<div id="main">
 			<ol>
