--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       -->
 	</head>
 	<body>
+		<div id="nav"> <a href="index.html">Getting to Know Git for ALA: Home</a></div>
 		<h1 id="header">Getting to Know Git: A Guide for the ALA Class</h1>
 		<div id="main">
 		<p>This is a resource guide for the upcoming ALA session, "Getting to Know git". 
@@ -16,15 +17,15 @@
 			you a brief lesson on how to work with git. </p>
 
 			<p>We will save the last half hour to have people investigate git (and GitHub), 
-			with different steps depending on whether you want to use command-line (command-line is
+			with different steps depending on whether you want to use command-line or not (command-line is
 			strongly encouraged but not necessary).</p>
 
 			<p>Feel free to follow any of these steps before class!</p>
 
 		<ul>
 			<li>Set yourself up with GitHub - see instructions below</a><span class="note"> (btw, you don't need to use GitHub to use git, but it does give you a lot of benefits).</span></li>
-			<li><a href="git_with_gui">Use Git Without the Command-line</a></li>
-			<li><a href="git_with_commandline">Use Git With the Command-line</a></li>
+			<li><a href="git_with_gui">Use Git Without the command-line</a></li>
+			<li><a href="git_with_commandline">Use Git With the command-line</a></li>
 			<li><a href="resources">Resources for learning more about Git<a></li>
 		</ul>
          <div id="gh-login">
