--- a/git_with_gui.html
+++ b/git_with_gui.html
@@ -10,16 +10,17 @@
 	</head>
 	<body>
 		<div id="nav">< <a href="index.html">Back to Getting to Know Git for ALA: Home</a></div>
-		<h1 id="header">Using Git with a GUI</h1>
+		<h1 id="header">Using Git with a graphical user interface (GUI)</h1>
 		<div id="main">
 			<ol>
-				<li>Install Git</li>
-				<li>Sign into your GitHub Account</li>
+				<li>Install A Git GUI and sign into your GitHub Account</li>
 				<li>Practice with Git and GitHub</li>
 			</ol>
 		<p>
-         <h2 id="install">Install your GUI</h2>
-
+         <h2 id="install">Install a Git GUI Tool</h2>
+         <h3>Mac</h3>
+          <p>If you're on a mac and want to work on a GUI, you'll have several options <a href="http://git-scm.com/download/gui/mac">see a git GUIs for mac</a> on the official git site), but to get you started, the GitHub GUI client is quick and easy, and works for the purpose of this class.</p>
+          <p>To install the GitHub Mac GUI, <a href="https://mac.github.com/">download the GUI from the  GitHub site</a>. Once you open up the tool, it will ask for your GitHub user name and password. It's pretty self-explanatory, but you can <a href="https://mac.github.com/help.html">look to the help guide</a> for more instructions if needed. 
 		</div>	
 
 </body>
