add git install mac cli

--- a/git_with_commandline.html
+++ b/git_with_commandline.html
@@ -24,7 +24,20 @@
 			<li><a href="#mac">Install on a Mac</li>
 			<li><a href="#other">Install on other platforms</a>
         </ul>
+
+        <h3 id="mac">Install Git on a Mac</h3>
+        <p>There's a chance git is already installed on your Mac! Open up a terminal window and run "git". If you get a long list of commands, you're probably ready to go. If the terminal says something about not knowing what you're talking about, you'll have to install it:</p>
+        <p>Go to the <a href="https://git-scm.com/downloads">git-scm downloads page</a> and download the newest version of git. When you open up the downloaded installer, the program will walk you through the set up, which is a quick process.</p>
+        <p>You can put in some configurations now - these will be added to every project you start on your computer. Open up your Terminal and run:
+        	<div class="example">
+        	git config --global user.name "your name"
+        </div>
+        <div class="example">
+        	git config --global user.email "your email address"
+        </div>
+        <p>
 		</div>	
+
 
 </body>
 </html>		
