add info about authentication

--- a/git_with_commandline.html
+++ b/git_with_commandline.html
@@ -15,7 +15,7 @@
 			<ol>
 				<li>Install Git</li>
 				<li>Configure some basic settings</li>
-				<li>Set up a key to authenticate with GitHub</li>
+				<li>Set up a key or creditential to authenticate with GitHub</li>
 				<li>Practice with Git and GitHub</li>
 			</ol>
 		<h2 id="install">Install Git</h2>
@@ -35,7 +35,10 @@
         <div class="example">
         	git config --global user.email "your email address"
         </div>
-        <p>
+        <p>You're ready to start working with git on your computer! One last thing, though - you'll want to set make it easier to push and pull files to GitHub. You can chooose to do this via http or SSH.</p>
+        <h3>Authenticating your computer with GitHub</h3>
+        <p> If you're familiar with SSH, you might want to set up an SSH key on your computer and add it to your GitHub profile. If you want to use the https protocol instead, you'll have to always give your user name and password. You could use a creditional helper to make this automatic.</p>
+        <p>Set up a key to authenticate with GitHub</p>
 		</div>	
 
 
