add links to authentication info

--- a/git_with_commandline.html
+++ b/git_with_commandline.html
@@ -37,7 +37,7 @@
         </div>
         <p>You're ready to start working with git on your computer! One last thing, though - you'll want to set make it easier to push and pull files to GitHub. You can chooose to do this via http or SSH.</p>
         <h3>Authenticating your computer with GitHub</h3>
-        <p> If you're familiar with SSH, you might want to set up an SSH key on your computer and add it to your GitHub profile. If you want to use the https protocol instead, you'll have to always give your user name and password. You could use a creditional helper to make this automatic.</p>
+        <p> If you're familiar with SSH, you might want to <a href="https://help.github.com/articles/generating-ssh-keys/">set up an SSH key</a> on your computer and add it to your GitHub profile. If you want to use the https protocol instead, you'll have to always give your user name and password. You could use a <a href="https://help.github.com/articles/caching-your-github-password-in-git/">creditional helper</a> to make this automatic.</p>
         <p>Set up a key to authenticate with GitHub</p>
 		</div>	
 
