--- a/git_with_commandline.html
+++ b/git_with_commandline.html
@@ -35,9 +35,24 @@
         <div class="example">
         	git config --global user.email "your email address"
         </div>
-        <p>You're ready to start working with git on your computer! One last thing, though - you'll want to set make it easier to push and pull files to GitHub. You can chooose to do this via http or SSH.</p>
-        <h3>Authenticating your computer with GitHub</h3>
-        <p> If you're familiar with SSH, you might want to <a href="https://help.github.com/articles/generating-ssh-keys/">set up an SSH key</a> on your computer and add it to your GitHub profile. If you want to use the https protocol instead, you'll have to always give your user name and password. You could use a <a href="https://help.github.com/articles/caching-your-github-password-in-git/">creditional helper</a> to make this automatic.</p>
+        <p>You're ready to start working with git on your computer! One last thing, though - you'll want to set up a SSH key on your computer and add that to your GitHub account. That way you can push and pull projects between your computer and GitHub with ease.</p>
+        <h3>Set up an SSH key to authenticate with GitHub</h3>
+        <p>If you run the following command, it will create a key on your computer <span class="note"> If you think you already have a key, you can run ls -al ~/.ssh to see if it's there - if it is, skip to the copying step</span></p>
+        	<div class="example">
+        		ssh-keygen -t rsa -b 4096 -C "your_email@example.com"
+        	</div>
+        	<p>Click enter to accept the defaults. If you choose to use a passphrase, keep it short! You should see a statement about your public information and key being saved.</p>
+        	<p>The next step is to copy this information so you can paste it into your GitHub account settings. Because of the nature of the key, you'll probably want to use a special command to copy the key (as opposed to opening up the document in a text editor and copying it from there).
+        		<h4>Copying on a Mac</h4>
+        		<div class="example">
+        			pbcopy < ~/.ssh/id_rsa.pub
+        		</div>
+        	<h4>Copying on a PC</h4>
+        	<div class="example">
+			  clip < ~/.ssh/id_rsa.pub
+			</div> 
+           <p class="note">If "clip" doesn't work on your PC, try: <strong>cat ~/.ssh/id_rsa.pub</strong></p>
+            
 		</div>	
 
 
