add 'other', connect install with key

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 		<ul>
 			<li>Set yourself up with GitHub - see instructions below</a><span class="note"> (btw, you don't need to use GitHub to use git, but it does give you a lot of benefits).</span></li>
-			<li><a href="git_with_gui.html">Use Git with a GUI (meaning, <em>without</em> the command-line)</a></li>
+			<li><a href="git_with_gui.html">Use Git with a GUI</a> (meaning, <em>without</em> the command-line)</li>
 			<li><a href="git_with_commandline.html">Use Git with the command-line</a></li>
 			<li><a href="resources.html">Resources for learning more about Git<a></li>
 		</ul>
