--- a/git_with_commandline.html
+++ b/git_with_commandline.html
@@ -67,6 +67,7 @@ You may receive a security warning about the software being from an unknown publ
 <li>Right click inside the folder.  Youíll notice two new options in your context menu: Git Bash and Git Gui</li>
 </ul>
 </ol>
+<p>OK, Windows user, you're almost done. Follow the steps for <a href="#key">authenticating with GitHub</a>, and then you'll be ready to practice.
 
         <h3 id="mac">Install Git on a Mac</h3>
         <p>There's a chance git is already installed on your Mac! Open up a terminal window and run "git". If you get a long list of commands, you're probably ready to go. If the terminal says something about not knowing what you're talking about, you'll have to install it:</p>
@@ -79,6 +80,9 @@ You may receive a security warning about the software being from an unknown publ
         	git config --global user.email "your email address"
         </div>
         <p>You're ready to start working with git on your computer! One last thing, though - you'll want to set up a SSH key on your computer and add that to your GitHub account. That way you can push and pull projects between your computer and GitHub with ease.</p>
+
+    <h3 id="other">Install Git on Other Platforms</h3>
+    <p>We're impressed! Try <a href="https://git-scm.com/download/">git-scm/downloads</a> and follow instructions from there.</p>    
 
         <h3 id="key">Set up an SSH key to authenticate with GitHub</h3>
         <p>If you run the following command, it will create a key on your computer <span class="note"> If you think you already have a key, you can run ls -al ~/.ssh to see if it's there - if it is, skip to the copying step</span></p>
@@ -100,7 +104,7 @@ You may receive a security warning about the software being from an unknown publ
            <h3>Paste your key into your GitHub settings</h3>
            <p>The last step in authenticating with GitHub is to log in to GitHub, go to your settings page (to do this, click on your profile picture and select "Settings from the drop down menu"). Once you're on the settings page, click "SSH Keys" on the left-hand menu, then "Add SSH key".</p>  
           
-         <p class="note">Is this step not working well for you? You can another way to authenticate: See < a href="https://help.github.com/articles/caching-your-github-password-in-git/">GitHub instructions for authenticating through https and a credential tool</a>.</p>
+         <p class="note">Is this step not working well for you? You can another way to authenticate: See <a href="https://help.github.com/articles/caching-your-github-password-in-git/">GitHub instructions for authenticating through https and a credential tool</a>.</p>
 		</div>	
 
 
