add skip to key from mac

--- a/git_with_commandline.html
+++ b/git_with_commandline.html
@@ -81,7 +81,7 @@ You may receive a security warning about the software being from an unknown publ
         <div class="example">
         	git config --global user.email "your email address"
         </div>
-        <p>You're ready to start working with git on your computer! One last thing, though - you'll want to set up a SSH key on your computer and add that to your GitHub account. That way you can push and pull projects between your computer and GitHub with ease.</p>
+        <p>You're ready to start working with git on your computer! One last thing, though - you'll want to <a href="#key">set up a SSH key</a> on your computer and add that to your GitHub account. That way you can push and pull projects between your computer and GitHub with ease.</p>
 
     <h3 id="other">Install Git on Other Platforms</h3>
     <p>So you're not using Windows or Mac? We're impressed! Try <a href="https://git-scm.com/download/">git-scm/downloads</a> for your OS and follow instructions from there.</p>    
