add practice placeholder

--- a/git_with_commandline.html
+++ b/git_with_commandline.html
@@ -108,7 +108,8 @@ You may receive a security warning about the software being from an unknown publ
           
          <p class="note">Is this step not working well for you? You can another way to authenticate: See <a href="https://help.github.com/articles/caching-your-github-password-in-git/">GitHub instructions for authenticating through https and a credential tool</a>.</p>
 		</div>	
-
+<h2 id="practice">Practice Git</h2>
+<p>Come class time, we'll set you up with an exercise. If you're itching to get started, have a look at some <a href="resources.html">git resources</a>.</p>
 
 </body>
 </html>		
