--- a/git_with_gui.html
+++ b/git_with_gui.html
@@ -14,7 +14,7 @@
 		<div id="main">
 			<ol>
 				<li>Install A Git GUI and sign into your GitHub Account</li>
-				<li>Practice with Git and GitHub</li>
+				<li><a href="#practice">Practice with Git and GitHub</a></li>
 			</ol>
 		<p>
          <h2 id="install">Install a Git GUI Tool</h2>
@@ -22,6 +22,10 @@
           <p>If you're on a mac and want to work on a GUI, you'll have several options (<a href="http://git-scm.com/download/gui/mac">see a git GUIs for mac</a> on the official git site), but to get you started, the GitHub GUI client is quick and easy, and works for the purpose of this class.</p>
           <p>To install the GitHub Mac GUI, <a href="https://mac.github.com/">download the GUI from the  GitHub site</a>. Once you open up the tool, it will ask for your GitHub user name and password. It's pretty self-explanatory, but you can <a href="https://mac.github.com/help.html">look to the help guide</a> for more instructions if needed. 
 		</div>	
+
+
+		<h2 id="practice">Practice Git</h2>
+<p>Come class time, we'll set you up with an exercise. If you're itching to get started, have a look at some <a href="resources.html">git resources</a>.</p>
 
 </body>
 </html>	
