Update minor grammatical issues.

--- a/git_with_gui.html
+++ b/git_with_gui.html
@@ -22,8 +22,8 @@
           <p>If you're on a mac and want to work on a GUI, you'll have several options (<a href="http://git-scm.com/download/gui/mac">see a git GUIs for mac</a> on the official git site), but to get you started, the GitHub GUI client is quick and easy, and works for the purpose of this class.</p>
           <p>To install the GitHub Mac GUI, <a href="https://mac.github.com/">download the GUI from the  GitHub site</a>. Once you open up the tool, it will ask for your GitHub user name and password. It's pretty self-explanatory, but you can <a href="https://mac.github.com/help.html">look to the help guide</a> for more instructions if needed. 
 	 <h3>PC</h3>
-          <p>There are <a href="http://git-scm.com/downloads/guis">several Windows-based GUIs</a> available if you use a PC.  For the purpose of this class, you might want to start with the GitHub for Windows GUI.  Before the download the GUI, you might also want to <a href="http://www.github.com/join">register for a GitHub account</a>.</p>
-          <p>To install GitHub for Windows, <a href="https://windows.github.com/">download the GitHub for Windows program</a>. Once you run the installation, the program will ask for your GitHub user name and password. Read the <a href="https://windows.github.com/help.html">GitHub for Windows Help guide</a> for more instructions if needed.</p>
+          <p>There are <a href="http://git-scm.com/downloads/guis">several Windows-based GUIs</a> available if you use a PC.  For the purpose of this class, you might want to start with the GitHub for Windows GUI.  Before you download the GUI, you might want to <a href="http://www.github.com/join">register for a GitHub account</a>.</p>
+          <p>To install GitHub for Windows, <a href="https://windows.github.com/">download the GitHub for Windows program</a>. Once you run the installation, the program will ask for your GitHub username and password. Read the <a href="https://windows.github.com/help.html">GitHub for Windows Help guide</a> for more instructions if needed.</p>
 	</div>	
 
 
