Update page with command-line dash

--- a/git_with_commandline.html
+++ b/git_with_commandline.html
@@ -10,7 +10,7 @@
 	</head>
 	<body>
 		<div id="nav">< <a href="index.html">Back to Getting to Know Git for ALA: Home</a></div>
-		<h1 id="header">Using Git with the Commandline</h1>
+		<h1 id="header">Using Git with the Command-line</h1>
 		<div id="main">
 			<ol>
 				<li>Install Git</li>
