Add GitHub section

--- a/resources.html
+++ b/resources.html
@@ -25,7 +25,11 @@
         	<ul>
         		<li><a href="https://try.github.io/levels/1/challenges/1">Practice git commands on a command-line like interface</a> </li>
         		<li><a href="https://help.github.com/categories/54/articles">GitHub Bootcamp</a></li>
-        	</ul>		
+        	</ul>
+        <h3>GitHub</h3>
+        <ul>
+          <li><a href="https://help.github.com">GitHub Help</a></li>
+        </ul>
         <h3>Help with Command-line</h3>
           <ul>
             <li><a href="http://cli.learncodethehardway.org/book/">Command line crash course</a></li>
@@ -33,7 +37,8 @@
           <h3>Other helpful things</h3>
           <ul>
           <li><a href="https://help.github.com/categories/20/articles">Git Hub Pages: Quick websites</a></li>
-          </ul>        
+          </ul>  
+          
 </div>	
 
 </body>
