--- a/resources.html
+++ b/resources.html
@@ -29,15 +29,19 @@
         <h3>GitHub</h3>
         <ul>
           <li><a href="https://help.github.com">GitHub Help</a></li>
+          <li><a href="https://help.github.com/categories/20/articles">Git Hub Pages: Quick websites</a></li>
+
         </ul>
         <h3>Help with Command-line</h3>
           <ul>
             <li><a href="http://cli.learncodethehardway.org/book/">Command line crash course</a></li>
           </ul>
-          <h3>Other helpful things</h3>
+         <
+         !-- <h3>Other helpful things</h3>
           <ul>
-          <li><a href="https://help.github.com/categories/20/articles">Git Hub Pages: Quick websites</a></li>
-          </ul>  
+          <li></li>
+          </ul> 
+          -->
           
 </div>	
 
