--- a/resources.html
+++ b/resources.html
@@ -25,6 +25,7 @@
         	<ul>
         		<li><a href="https://try.github.io/levels/1/challenges/1">Practice git commands on a command-line like interface</a> </li>
         		<li><a href="https://help.github.com/categories/54/articles">GitHub Bootcamp</a></li>
+            <li><a href="https://confluence.atlassian.com/display/STASH/Basic+Git+commands">Basic git commands</a>
         	</ul>		
         <h3>Help with Command-line</h3>
           <ul>
@@ -32,7 +33,7 @@
           </ul>
           <h3>Other helpful things</h3>
           <ul>
-          <li><a href="https://help.github.com/categories/20/articles">Git Hub Pages: Quick websites</a></li>
+          <li><a href="https://pages.github.com/">Git Hub Pages: Quick websites</a></li>
           </ul>        
 </div>	
 
