add beginning exercise instructions

--- a/git_with_commandline.html
+++ b/git_with_commandline.html
@@ -109,6 +109,15 @@ You may receive a security warning about the software being from an unknown publ
          <p class="note">Is this step not working well for you? You can another way to authenticate: See <a href="https://help.github.com/articles/caching-your-github-password-in-git/">GitHub instructions for authenticating through https and a credential tool</a>.</p>
 		</div>	
 <h2 id="practice">Practice Git</h2>
+
+<h3>Fork & clone a repository</h3>
+<p>Visit GitHub and fork our repository. You can of course clone whatever repository you'd like, but for the purpose of this practice, go ahead and fork ours.</p>
+<p>Go to the forked copy of the repository, and grab the code to clone it (if you've set up your SSH key, get the SSH address).</p>
+<p>On your local computer, go to a directory where you don't mind having a practice file. Here you can put in the following command, making sure to change the name of the URL to make it yours:
+  <div class="example">
+    git clone gitaddress.
+  </div>
+ <p>Make a change to a file... To see what has changed in your repository, run  
 <p>Come class time, we'll set you up with an exercise. If you're itching to get started, have a look at some <a href="resources.html">git resources</a>.</p>
 
 </body>
