--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
          					<li><a href="https://github.com/hklish01/gettingtoknowgit/tree/gh-pages">The code for this webpage</a>
          			    </ul>
          			  </ol> 
-              <p>The next step involves working with git on your own computer. You have to options:<ol><li><a href="git_with_commandline.html">Work on the command-line</a> <span class="note">(do it!)</span></li> <li><a href="git_with_gui.html">Work with a GUI tool</a> (use your mouse)</li>. </p>
+              <p>The next step involves working with git on your own computer. You have two options:<ol><li><a href="git_with_commandline.html">Work on the command-line</a> <span class="note">(do it!)</span></li> <li><a href="git_with_gui.html">Work with a GUI tool</a> (use your mouse)</li>. </p>
 
 
 		</div>	
