--- a/git_with_commandline.html
+++ b/git_with_commandline.html
@@ -111,17 +111,48 @@ You may receive a security warning about the software being from an unknown publ
 <h2 id="practice">Practice Git</h2>
 
 <h3>Fork & clone a repository</h3>
-<p>Visit GitHub and fork our repository. You can of course clone whatever repository you'd like, but for the purpose of this practice, go ahead and fork ours.</p>
+<p>Visit GitHub and fork our repository at <a href="https://github.com/hklish01/gettingtoknowgit">https://github.com/hklish01/gettingtoknowgit</a>. <span class="note">You can of course clone whatever repository you'd like, but for the purpose of this practice, go ahead and fork ours.</span></p>
 <img class="screen_shot" alt="screenshot with fork button pointed to" src="images/ghFork.jpg"/>
 <p>Go to the forked copy of the repository, and grab the code to clone it (if you've set up your SSH key, get the SSH address).</p>
 <img class="screen_shot" alt="screenshot with clone url pointed to" src="images/ghClone.jpg"/>
 
-<p>On your local computer, go to a directory where you don't mind having a practice file. Here you can put in the following command, making sure to change the name of the URL to make it yours:
+<p>On your local computer, go to a directory where you don't mind having a practice file.
+<div class="example">Mkdir new_folder</div>
+Move into that folder:
+<div class="example">cd new_folder</div>
+ Here you can put in the following command, making sure to change the name of the URL to make it yours:
   <div class="example">
     git clone git@github.com:<span class="note">yourgithubusername</span>/gettingtoknowgit.git
   </div>
- <p>Make a change to a file... To see what has changed in your repository, run  
-<p>Come class time, we'll set you up with an exercise. If you're itching to get started, have a look at some <a href="resources.html">git resources</a>.</p>
+  <div>Git will put the project into a new folder called gettingtoknowgit. You can also have git call it a different name by saying git clone <span class="note">http://thegitrepoaddress different_folder_name</span>.
+<h3>Make a change to your repository</h3>
+ <p>Make a change to a file - Make any of the proposed additions below:
+<ul>
+<li>Add information about banned books to the banned_book.txt file.</li>
+<li>Add a banned book to this same file.</li>
+<li>Add a library name and link to the libraries_info.txt file</li>
+<li>Add a file with a different type of information about banned books (perhaps a list of banned book events?)
+<li>Add and commit your changes, then push them back to your repository on GitHub. Issue a pull request to the original repository. </li>
+</ul>
+<h3>Commit your changes</h3>
+Once you've made a change, run <strong>git status</strong> to see what's changed in your repository.
+To commit your changes - remember that it's a two step process:
+<ol>
+  <li>Stage the files by <strong>git add .</strong> <span class="note"> The dot says take everything that's changed. You have to be at the root of your directory to see all the changes you've made. Git only sees what's in the current directory.</span></li>
+  <li>Commit the files by <strong>git commit -m "<em>note about your change</em>"</strong>. <span class="note">Remember to leave a note about the changes</note>
+ </ol> 
+ <p>Run git status again to make sure you committed all the files you want. Run <strong>git log</strong> to see a history of commits. Notice that this contains commits from before you forked the project.</p>
+<h3>Push your updated repository up to GitHub</h3>
+ <p>Know push to your github repository. Just for the sake of knowing you can, take a look at the address you'll be pushing to:
+ <div class="example">
+ git remote -v
+ </div>
+ <p>You should see the git address for your repository. You can push to multiple locations. The default one is called "origin". So to push your repository back up to your GitHub account:
+ <div class="example">
+git push master origin
+ </div>  
+<h3>What else?</h3>
+<p>You now know some basics of working with git! It'll be easier to learn from here. You may want to practice with branches and merging. See our <a href="resources.html">resources page</a> for further tutorials and help.</p>
     </div>  
 </body>
 </html>		
